test/parse/expr/unary-extend-disabled.txt
;;; ERROR: 1
(module
  (func
    i32.const 0
    i32.extend8_s
    drop

    i32.const 0
    i32.extend16_s
    drop

    i64.const 0
    i64.extend8_s
    drop

    i64.const 0
    i64.extend16_s
    drop

    i64.const 0
    i64.extend32_s
    drop))
(;; STDERR ;;;
out/test/parse/expr/unary-extend-disabled.txt:5:5: error: opcode not allowed: i32.extend8_s
    i32.extend8_s
    ^^^^^^^^^^^^^
out/test/parse/expr/unary-extend-disabled.txt:9:5: error: opcode not allowed: i32.extend16_s
    i32.extend16_s
    ^^^^^^^^^^^^^^
out/test/parse/expr/unary-extend-disabled.txt:13:5: error: opcode not allowed: i64.extend8_s
    i64.extend8_s
    ^^^^^^^^^^^^^
out/test/parse/expr/unary-extend-disabled.txt:17:5: error: opcode not allowed: i64.extend16_s
    i64.extend16_s
    ^^^^^^^^^^^^^^
out/test/parse/expr/unary-extend-disabled.txt:21:5: error: opcode not allowed: i64.extend32_s
    i64.extend32_s
    ^^^^^^^^^^^^^^
;;; STDERR ;;)
